package com.smarthome.core;

/**
 * Represents all supported device types in the smart home system.
 */
public enum DeviceType {
    LIGHT,
    THERMOSTAT,
    DOOR
} 